--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    font-family: 'poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
     background-color: #ffffff;
     color: #333;
     line-height: 1.6;
@@ -661,7 +661,7 @@ body {
 
 .map-container {
     position: relative;
-    height: 400px;
+    height: 600px;
     overflow: hidden;
 }
 
