--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,10 +4,10 @@
         <button class="hamburger-menu" id="hamburgerMenu">
             <i class="fas fa-bars"></i>
         </button>
-        <div class="logo">Star Parking Ltd.</div>
+        <a href="../index.html" class="logo">Star Parking Ltd.</a>
     </div>
     <div class="nav-center">
-        <a href="index.html" class="nav-link" data-page="home">Home</a>
+        <a href="home.html" class="nav-link" data-page="home">Home</a>
         <a href="pages/activities.html" class="nav-link" data-page="activities">Activities</a>
         <a href="pages/history.html" class="nav-link" data-page="history">History</a>
         <a href="pages/payout.html" class="nav-link" data-page="payout">Payout</a>
