--- a/css/styles.css
+++ b/css/styles.css
@@ -1189,13 +1189,18 @@ body {
 }
 
 .data-table td {
-    padding: 1rem 0.75rem;
-    border-bottom: 1px solid #f1f5f9;
+    padding: 0.5rem 0.75rem;
+    border-bottom: 1px solid #ababab;
+    border-right: 1px solid #ababab;
     vertical-align: middle;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-size: 12px;
     color: #646464;
+}
+
+.data-table tbody td:last-child {
+    border-right: none;
 }
 
 .data-table tbody tr:hover {
